--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -1660,8 +1660,8 @@
     "* 0.4424 , 0.2766 , 0.1162 and 0.0962 which makes the cummulative explained variance 0.9314\n",
     "* In the first dimension , Fresh , Frozen and Delicatessen have low weights. However Detergents_paper has higher weight hence it really distinguishes this dimension from restaurants hotels or other such customers which have higher weights of grocery and frozen products .\n",
     "* In Second dimension Milk Grocery and Detergents_paper are not having bigger weights. Which shows this particular dimension is for representing customers who do not have much consumption of proper food and hence differentiates from restaurants.\n",
-    "* The third dimension(having a relatively lower variance as compared to first two dimensions) has a remarkably high weight of delictassen and fresh goods. This makes the dimension for customers having a greater day to day buying demand.\n",
-    "* The forth dimension has a higher weight of Frozen goods and a fairly high spending on delictassen. This makes this customer a kind of restaurant or some similar business needing some seasonal products for all the year or so. This kind of customers can be proved promising for some selected products.\n",
+    "* The third dimension(having a relatively lower variance as compared to first two dimensions) has a remarkably high weight of delictassen and fresh goods but in oppsite direction which makes this particular dimension more concentrated towards Fresh goods as that has the highest value feature weight. This makes the dimension for customers having a greater day to day buying demand.\n",
+    "* The forth dimension has a higher weight of Frozen goods and a fairly high weight(on the negative side) of delictassen which means this dimension might denote the customer who are particularly interested in frozen products and least interested in delictessen. This makes this customer a kind of restaurant or some similar business needing some seasonal products for all the year or so. This kind of customers can be proved promising for some selected products.\n",
     "**"
    ]
   },
